# TrackManiaAI

./: .gitignore  README.md  pyproject.toml
config/: tmrl.full.json  tmrl.lidar.json
configs/: base.yaml  full_bc.yaml  full_crossq.yaml  full_droq.yaml  full_redq.yaml  full_redq_diagnostic.yaml  full_redq_top100.yaml  full_redq_top100_tmrl_test.yaml  full_sac.yaml  lidar_sac.yaml
docs/: setup.md
openplanet/TM20AIBridge/: Main.as  Protocol.as  (+4 more)
results/: redq_droq_crossq_ladder.md  redq_ghost_offline_training.md  reference_target_runs.md
scripts/: apply_tmrl_config.py  backfill_final_checkpoint_eval.py  benchmark_env.py  benchmark_redq_learner.py  bootstrap_phase1.ps1  build_ghost_dataset.py  build_reference_target_bundle.py  check_bridge.py  check_dxcam_spawn.py  check_environment.py  cleanup_artifacts.py  evaluate.py  evaluate_redq_policy_modes.py  export_video.py  extract_ghost_trajectories.py  fetch_top100_ghosts.py  force_window_size.py  pretrain_bc.py  pretrain_ghost_redq.py  probe_worker_bootstrap.py  record_demos.py  record_reward.py  report_training.py  run_algorithm_ladder.py  run_full_sac_with_movement_monitor.py  run_phase1_smoke.ps1  run_rank11_100_validation_campaign.py  run_redq_diagnostics.py  smoke_test_env.py  train_full_crossq.py  train_full_droq.py  train_full_redq.py  train_full_sac.py  train_lidar_sac.py
tests/: test_algorithm_variants.py  test_campaign.py  test_dxcam_capture.py  test_env_api.py  test_evaluator_and_data.py  test_gamepad.py  test_ghost_pipeline.py  test_lidar_capture.py  test_live_env_lock.py  test_metrics.py  test_preprocess.py  test_redq_learner.py  test_redq_stack.py  test_replay.py  test_reporting.py  test_research_and_cleanup.py  test_reset_manager.py  test_reward.py  test_sac_stack.py  test_train_features.py  test_trajectory.py  test_worker_learner.py
(+76 files in other folders)
