[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm20-ai"
version = "0.2.0"
description = "Trackmania 2020 runtime scaffold with a custom Openplanet bridge."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex" },
]
dependencies = [
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "rich>=13",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
